<resources>
    <string name="app_name" translatable="false">NyaaPantsu</string>
    <string name="nyaapantsu" translatable="false">NyaaPantsu</string>
    <string name="title_activity_home">Torrents - NyaaPantsu</string>
    <string name="title_activity_results">Results for</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="renchon" translatable="false">れんちょん</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="torrents">Torrents</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>
    <string name="title_activity_search">Search</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="max">Max</string>
    <string name="other">Other</string>
    <string name="loading">Loading data…</string>
    <string name="preparing">Preparing streaming…</string>
    <string name="downloading">Downloading…</string>
    <string name="uploaded_by">Uploaded by</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="download">Download</string>
    <string name="copy">Copy</string>
    <string name="show_more">Show More</string>
    <string name="website">Website</string>
    <string name="hash">Hash</string>
    <string name="Files">Files</string>
    <string name="last_scraped">Last Scraped</string>
    <string name="downloads">Downloads</string>
    <string-array name="cat_array">
        <item>All Categories</item>
        <item>Anime</item>
        <item>Anime - Anime Music Video</item>
        <item>Anime - English-translated</item>
        <item>Anime - Non-English-translated</item>
        <item>Anime - Raw</item>
        <item>Audio</item>
        <item>Audio - Lossless</item>
        <item>Audio - Lossy</item>
        <item>Literature</item>
        <item>Literature - English-translated</item>
        <item>Literature - Non-English-translated</item>
        <item>Literature - Raw</item>
        <item>Live Action</item>
        <item>Live Action - English-translated</item>
        <item>Live Action - Idol/Promotional Video</item>
        <item>Live Action - Non-English-translated</item>
        <item>Live Action - Raw</item>
        <item>Pictures</item>
        <item>Pictures - Graphics</item>
        <item>Pictures - Photos</item>
        <item>Software</item>
        <item>Software - Applications</item>
        <item>Software - Games</item>
    </string-array>
    <string-array name="status_array">
        <item>Show All</item>
        <item>Filter Remakes</item>
        <item>Trusted</item>
        <item>A+</item>
    </string-array>
    <string-array name="language_array">
        <item>Catalan</item>
        <item>Simplified Chinese</item>
        <item>Traditional Chinese</item>
        <item>Dutch</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Norwegian</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Thai</item>
    </string-array>

    <string name="network_error">Network error</string>
    <string name="token_expired">You\'ve been logged out, your token credentials have expired.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_about">About - NyaaPantsu</string>
    <string name="torrent_not_available">The torrent doesn\'t seem to be available</string>
    <string name="external_storage_not_available">External Storage doesn\'t seem to be available</string>
    <string name="magnet_copied">Magnet Link copied!</string>

    <string-array name="upload_type_array">
        <item>Torrent File</item>
        <item>Magnet</item>
    </string-array>

    <!-- Upload Messages -->
    <string name="upload_progress">Uploading at [[UPLOAD_RATE]] ([[PROGRESS]])</string>
    <string name="upload_done">Upload completed successfully in [[ELAPSED_TIME]]</string>
    <string name="try_error">The torrent couldn\'t be created due to an error, please try again!</string>

    <!-- Upload Errors -->
    <string name="upload_error">Error while uploading</string>
    <string name="name_required">Torrent name is required!</string>
    <string name="file_required">A torrent file or magnet is needed!</string>
    <string name="category_required">A category must be selected!</string>
    <string name="lang_next_time">No language selected! You should select one next time!</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="torrent_file">Torrent File</string>
    <string name="choose">Choose…</string>
    <string name="name">Name</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="mark_as_remake">Mark as Remake</string>
    <string name="mark_as_anon">Upload as Anonymous</string>
    <string name="congrats">Congratulation!</string>
    <string name="welcome_mess">You just have downloaded the NyaaPantsu App. You can now try to *mofu* *mofu* (click) Megumin to have full access!</string>
    <string name="about_mess">This app is distributed under MIT License. This is purely an educational proof of concept.</string>
    <string name="megumin">Megumin</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_account">Account</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_keep_login">Remember my account</string>
    <string name="pref_description_keep_login">Log you in every time you start the app (does not store your password)
    </string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_enable_notifications">Enable notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="watch">Watch</string>
    <string name="title_activity_watch">Watch Anime!</string>
    <string name="recent">Recent</string>
    <string name="stream">Stream</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="doubleBackToExit">Please click BACK again to exit</string>
    <string name="pref_title_double_back_to_exit">Double back to exit</string>
    <string name="pref_title_enable_mascot_voice">Enable mascot voice</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="user_profile">User profile</string>
    <string name="deleted">Deleted</string>
    <string name="permission_required">Permission required</string>
    <string name="type_languages">Type languages</string>
    <string name="done">Done</string>
    <string name="magnet">Magnet</string>
    <string name="play">Play</string>
    <string name="dateFormat">yyyy/mm/dd</string>
    <string name="favorites">Favorites</string>
    <string name="seeders">Seeders</string>
    <string name="leechers">Leechers</string>
</resources>
