<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_torrents"
            android:icon="@drawable/ic_list_black_24px"
            android:title="@string/torrents" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_file_upload_black_24px"
            android:title="@string/upload" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black_24px"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24px"
            android:title="@string/search" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_user_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/user_profile"
                android:visible="false" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24px"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help_outline_black_24px"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
