<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_torrents"
            android:title="@string/torrents" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_action_upload"
            android:title="@string/upload" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/search" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_name"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
