<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general"
        android:key="pref_key_settings_general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="doubleBackToExit"
            android:title="@string/pref_title_doubleBackToExit" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_account"
        android:key="pref_key_settings_account">

        <SwitchPreference
            android:defaultValue="true"
            android:key="keep_login_switch"
            android:summary="@string/pref_description_keep_login"
            android:title="@string/pref_title_keep_login" />
    </PreferenceCategory>

</PreferenceScreen>

