<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBluePastelLight"
    tools:context="cat.pantsu.nyaapantsu.ui.fragment.UploadFragment"
    tools:showIn="@layout/fragment_upload">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="212dp"
        android:layout_height="290dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/renchon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/renchon_2x" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="@dimen/nav_header_vertical_spacing"
        android:paddingStart="@dimen/nav_header_vertical_spacing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:clipToPadding="true"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/torrent_file"
                    android:textColor="@color/colorDarkLink"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/chooseButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/choose" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@color/colorDarkLink"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/categorySpin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/nav_header_vertical_spacing" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textColor="@color/colorDarkLink"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/languageSpin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/colorDarkLink" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/website_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/colorDarkLink" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/desc_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:hint="@string/description"
                    android:inputType="textAutoCorrect|textMultiLine"
                    android:lines="3"
                    android:textColor="@color/colorDarkLink" />
            </android.support.design.widget.TextInputLayout>

            <Switch
                android:id="@+id/remakeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mark_as_remake"
                android:textColor="@color/colorDarkLink"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/anonSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mark_as_anon"
                android:textColor="@color/colorDarkLink"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>

