<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBluePastelLight"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="212dp"
        android:layout_height="290dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/renchon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/renchon" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="32dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/fab_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signIn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_sign_in"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
